--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,326 @@
-/* место для вашего кода */
+/* Глобальные стили секций */
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  padding: 88px 50px;
+}
+
+.cover {
+  position: relative;
+  padding: 165px 50px 50px;
+  background: url("../images/cover.jpg") center/cover no-repeat;
+}
+
+.lots {
+  padding: 177px 24px 1px;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 2px;
+  padding: 154px 14px;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 27px 50px 90px;
+}
+
+/* Шапка */
+.header_menu {
+  justify-self: start;
+}
+
+.menu_links {
+  display: flex;
+  gap: 32px;
+  list-style: circle;
+  margin-top: -7px;
+}
+
+.link_list {
+  font-size: 18px;
+  text-underline-offset: 4px;
+}
+
+.main_link_marker {
+  text-decoration: none;
+  list-style: none;
+}
+
+.header_logo {
+  justify-self: center;
+  width: 145px;
+  padding: 4px;
+}
+
+.address {
+  justify-self: end;
+  max-width: 220px;
+  font-size: 18px;
+  line-height: 1.35;
+  text-underline-offset: 4px;
+  margin-right: 20px;
+  margin-bottom: 4px;
+  font-style: normal;
+  width: 240px;
+}
+
+/* Обложка */
+.overlay {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 1;
+}
+
+.cover_title {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 100px;
+  line-height: 1.15;
+  text-transform: uppercase;
+  padding: 0;
+}
+
+.text_cover {
+  display: block;
+  letter-spacing: 0.3em;
+}
+
+.text_center {
+  display: block;
+  letter-spacing: 0.3em;
+  text-align: center;
+  margin-right: -30px;
+  margin-top: 14px;
+}
+
+.text_right {
+  display: block;
+  letter-spacing: 0.3em;
+  text-align: right;
+  margin-top: 15px;
+  justify-content: end;
+  margin-right: -30px;
+}
+
+.letter_spacing {
+  letter-spacing: 0.6em;
+}
+
+.no_letter_spacing {
+  letter-spacing: 0;
+}
+
+.cover_description {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 102px;
+  margin-top: 105px;
+  padding: 0;
+}
+
+.cover_text {
+  color: #fff;
+  font-size: 22px;
+  line-height: 1.27;
+  text-transform: uppercase;
+  word-spacing: 18px;
+  margin-right: 6px;
+}
+
+.button {
+  border: 1px solid #fff;
+  padding: 12px 32px;
+  color: #fff;
+  font-size: 22px;
+  text-transform: uppercase;
+  background: transparent;
+  cursor: pointer;
+  width: auto;
+  height: auto;
+  line-height: normal;
+}
+
+/* Лоты */
+.title_lots {
+  margin-bottom: 28px;
+  padding-left: 40px;
+  font-size: 40px;
+  text-transform: uppercase;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.container_lots {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 25px;
+  list-style: none;
+  margin-bottom: 30px;
+  justify-content: space-between;
+  align-items: stretch;
+  margin-left: 0;
+}
+
+.card_lots {
+  flex: 1;
+  min-width: 0;
+  width: auto;
+  min-height: 450px;
+  max-width: none;
+}
+
+.card_link {
+  display: block;
+  height: 100%;
+  text-decoration: none;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding: 48px 40px 82px;
+  color: #fff;
+  background: center/cover no-repeat;
+}
+
+.card_about_cinema {
+  background-image: url("../images/card-lot-01.jpg");
+}
+
+.card_about_book {
+  background-image: url("../images/card-lot-02.jpg");
+}
+
+.card_about_picture {
+  background-image: url("../images/card-lot-03.jpg");
+}
+
+.card_title {
+  position: relative;
+  z-index: 2;
+  font-size: 22px;
+  line-height: 1.2;
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+
+.text_on_card {
+  position: relative;
+  z-index: 2;
+  font-size: 20px;
+  line-height: 1.2;
+  margin-top: 36px;
+  margin-bottom: -36px;
+}
+
+.view_more {
+  margin-left: 40px;
+  font-size: 20px;
+  text-underline-offset: 5px;
+  padding-top: 0;
+}
+
+/* Об аукционе */
+.about_container {
+  display: contents;
+}
+
+.about_logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  background: #000;
+  justify-self: center;
+}
+
+.about_logo_image {
+  width: 148px;
+}
+
+.about_content {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  gap: 0;
+}
+
+.title_about {
+  margin: 100px 0;
+  font-size: 40px;
+  text-transform: uppercase;
+  align-self: flex-start;
+  line-height: normal;
+}
+
+.about_text {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  font-size: 20px;
+  line-height: 1.2;
+  padding: 0;
+}
+
+.text_up, .text_down {
+  padding: 0;
+}
+
+/* Подвал */
+.footer_menu {
+  justify-self: center;
+  padding-left: 0;
+}
+
+.footer_menu_links {
+  list-style: none;
+  text-align: center;
+}
+
+.footer_links {
+  font-size: 18px;
+  text-underline-offset: 4px;
+}
+
+.footer_main {
+  text-decoration: none;
+}
+
+.footer_images {
+  justify-self: end;
+  display: flex;
+  gap: 48px;
+  list-style: none;
+}
+
+.images_footer {
+  width: 48px;
+}
+
+.footer_address {
+  max-width: 240px;
+  font-size: 18px;
+  line-height: 1.35;
+  text-underline-offset: 4px;
+  font-style: normal;
+  padding-left: 0;
+}
